# detach-rs

./: .gitignore  Cargo.toml  README.md  playground.rs
.github/workflows/: ci-cross-platform.yml
examples/: cross.rs
src/: main.rs
src/lib/: mod.rs
