[package]
name = "detach"
version = "0.0.1"
edition = "2024"

[lib]
name = "detach"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
clap = { version = "4.5.51", features = ["color", "derive", "error-context", "help", "std", "suggestions", "unstable-doc", "usage"] }
env_logger = "0.11.8"
libc = { version = "=0.2.177", features = ["std"] }
log = "^0.4"
log4rs = { version = "^1.4", features = ["toml", "console_appender", "file_appender"] }
tokio = { version = "1.48.0", features = ["time", "macros", "rt-multi-thread", "fs", "io-util", "process"] }
termios = "0.3"
scopeguard = "1.2"
crossterm = "0.27"
atty = "0.2"




