[package]
name = "detach"
version = "0.0.1"
edition = "2024"

[lib]
name = "detach"
path = "src/lib/mod.rs"

[dependencies]

actix = { version = "0.13.5" }

actix-cors = { version = "0.7.0" }

actix-http = { version = "3.9.0" }

actix-web = { version = "4.9.0" }

actix-web-actors = { version = "4.3.1" }
anyhow = "1.0.100"
chrono = "0.4"
clap = { version = "4.5.51", features = ["color", "derive", "error-context", "help", "std", "suggestions", "unstable-doc", "usage"] }
env_logger = "0.11.8"
expectrl = "0.8.0"
gnostr-relay = "1908.924232.84720"
libc = { version = "=0.2.177", features = ["std"] }
log = "^0.4.21" # Updated log dependency
tokio = { version = "1.48.0", features = ["time", "macros", "rt-multi-thread", "fs", "io-util", "process"] }
tracing = { version = "0.1.40" }
tracing-core = "0.1.30"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


